--- a/nextflow.config
+++ b/nextflow.config
@@ -4,13 +4,15 @@ profiles {
 }
 }
 conda.enabled = true
+params.spreadsheet= "${projectDir}/spreadsheets"
+params.files_dir= "${projectDir}/files"
 params.action= "add"
 params.xml_output= "${projectDir}/output"
 params.webinCli_dir= "${projectDir}/webin-cli"
 params.sender_email= ""
 params.rec_email= ""
-params.transfer_output= "${projectDir}/data"
-
+params.metadata_log= "${projectDir}/output/logs"
+params.webinCli_log= "${projectDir}/files/submissions"
 
 
 
